src/objects/Trifecta_Survey_Question_Choice__c.object
<CustomObject>
    <description>choices for the survey Question</description>
    <fields>
        <fullName>Load_Id__c</fullName>
        <description>External Unique value for every Survey Question Choice record created.</description>
        <externalId>true</externalId>
        <label>Load Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Question__c</fullName>
        <description>Id of the Survey Question</description>
        <label>Survey Question</label>
        <referenceTo>Trifecta_Survey_Question__c</referenceTo>
        <relationshipLabel>Trifecta Survey Question Choices</relationshipLabel>
        <relationshipName>Trifecta_Survey_Question_Choices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>text for the choice</description>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weightage__c</fullName>
        <description>Used to track the weightage of the choice when populating the chart.</description>
        <inlineHelpText>Add weightage if you would like to display them in chart.</inlineHelpText>
        <label>Weightage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Trifecta Survey Question Choice</label>
    <nameField>
        <displayFormat>SQC-{0000000}</displayFormat>
        <label>Trifecta Survey Question Choice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trifecta Survey Question Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>